test: add validations for consensus events used by Turtle tests (#18369)
Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>