@@ -4,8 +4,8 @@ package com.swirlds.platform.test.fixtures.consensus.framework;
 import com.hedera.hapi.node.state.roster.Roster;
 import com.swirlds.common.context.PlatformContext;
 import com.swirlds.platform.system.address.AddressBook;
-import com.swirlds.platform.test.fixtures.consensus.framework.validation.ConsensusOutputValidation;
-import com.swirlds.platform.test.fixtures.consensus.framework.validation.Validations;
+import com.swirlds.platform.test.fixtures.consensus.framework.validation.ConsensusOutputValidator;
+import com.swirlds.platform.test.fixtures.consensus.framework.validation.ConsensusRoundValidator;
 import com.swirlds.platform.test.fixtures.event.generator.GraphGenerator;
 import com.swirlds.platform.test.fixtures.gui.ListEventProvider;
 import com.swirlds.platform.test.fixtures.gui.TestGuiSource;
@@ -17,6 +17,7 @@ import org.hiero.consensus.model.node.NodeId;
 
 /** A type which orchestrates the generation of events and the validation of the consensus output */
 public class ConsensusTestOrchestrator {
+    private final ConsensusRoundValidator consensusRoundValidatorWithAllChecks = new ConsensusRoundValidator();
     private final PlatformContext platformContext;
     private final List<ConsensusTestNode> nodes;
     private long currentSequence = 0;
@@ -94,25 +95,27 @@ public class ConsensusTestOrchestrator {
     /**
      * Validates the output of all nodes against the given validations and clears the output
      *
-     * @param validations the validations to run
+     * @param consensusOutputValidator the validator to run all neeeded validations
      */
-    public void validateAndClear(final Validations validations) {
-        validate(validations);
+    public void validateAndClear(final ConsensusOutputValidator consensusOutputValidator) {
+        validate(consensusOutputValidator);
         clearOutput();
     }
 
     /**
      * Validates the output of all nodes against the given validations
      *
-     * @param validations the validations to run
+     * @param consensusOutputValidator the validator to run
      */
-    public void validate(final Validations validations) {
-        final ConsensusTestNode node1 = nodes.get(0);
+    public void validate(final ConsensusOutputValidator consensusOutputValidator) {
+        final ConsensusTestNode node1 = nodes.getFirst();
         for (int i = 1; i < nodes.size(); i++) {
-            final ConsensusTestNode node2 = nodes.get(i);
-            for (final ConsensusOutputValidation validator : validations.getList()) {
-                validator.validate(node1.getOutput(), node2.getOutput());
-            }
+            final ConsensusTestNode otherNode = nodes.get(i);
+
+            consensusOutputValidator.validate(node1.getOutput(), otherNode.getOutput());
+            consensusRoundValidatorWithAllChecks.validate(
+                    node1.getOutput().getConsensusRounds(),
+                    otherNode.getOutput().getConsensusRounds());
         }
     }
 
